--- a/week3/Index.HTML
+++ b/week3/Index.HTML
@@ -7,8 +7,37 @@
 </head>
 
 <body>
-    <h1> Reggie's Coffee Shop</h1>
-    Welcome to our shop
+    <header>
+        <h1> 
+            Reggie's Coffee Shop
+        </h1>
+    </header>
+    <!-- this is a HTML comment  -->
+    <main>
+        <article>
+            <h2>Our Story</h2>
+            <p>
+            We are a <em>family owned business</em> , Reggie is the <abbr title="Chief Executive Officer">CEO</abbr> and the head barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their 10<sup>th</sup> anniversary together in December 2021.
+            </p>
+            <blockquote>
+                We love Coffee! <cite>- Reggie & Maria</cite>
+            </blockquote>
+            <hr>
+            <section>
+                <h3>Ottawa</h3>
+                <p>
+                    We are a local coffee shop based in Ottawa. Our specialty is <b>Organic Fair-trade</b> coffee.
+                </p>
+            </section>
+        </article>
+        <aside>
+            <H3>Merchandise</H3>
+            </aside>
+    </main>
+    <!-- site footer -->
+    <footer>
+    Copyright Reggie's Coffee Shop, 2021 
+    </footer>
 </body>
 
 </html>
