--- a/week3/Index.HTML
+++ b/week3/Index.HTML
@@ -36,8 +36,9 @@
     </main>
     <!-- site footer -->
     <footer>
-    Copyright Reggie's Coffee Shop, 2021 
-    </footer>
+    Copyright Reggie's Coffee Shop, 2021.
+
+ </footer>
 </body>
 
 </html>
