--- a/week3/Index.HTML
+++ b/week3/Index.HTML
@@ -36,7 +36,7 @@
     </main>
     <!-- site footer -->
     <footer>
-    Copyright Reggie's Coffee Shop, 2021.
+    Copyright Reggie's Coffee Shop, 2021..
 
  </footer>
 </body>
