--- a/week3/index.html
+++ b/week3/index.html
@@ -32,11 +32,48 @@
         </article>
         <aside>
             <H3>Merchandise</H3>
+            <!-- adding list for merchandise -->
+            <ul>
+                <li>T-shirts</li>
+                <li>Hats</li>
+                <li>Hoodies</li>
+            </ul>
             </aside>
+            <!-- adding section for ordered list -->
+            <section>
+                <h3> Events</h3>
+                <ol>
+                    <li>June 23<sup>rd</sup> - Coffee for Hope Foundation</li>
+                    <li>July 17<sup>th</sup> - Live Music</li>
+                </ol>
+            </section>
+            <!-- adding section for the descritpion list  -->
+            <section>
+                <h3>Treat of the Week</h3>
+                <dl>
+                    <dt>Name</dt>
+                    <dd>Banana Bread</dd>
+                    <dt>Calories</dt>
+                    <dd>250</dd>
+                    <dt>Ingredients</dt>
+                    <dd>
+                        <ul>
+                            <li>all purpose flour</li>
+                            <li>baking Soda</li>
+                            <li>baking Powder</li>
+                            <li>salt</li>
+                            <li>sugar</li>
+                            <li>eggs</li>
+                            <li>lemon juice</li>
+                            <li>bananas</li>
+                        </ul>
+                    </dd>
+                </dl>
+            </section>
     </main>
     <!-- site footer -->
     <footer>
-    Copyright Reggie's Coffee Shop, 2021..
+    Copyright Reggie's Coffee Shop, 2021.
 
  </footer>
 </body>
