--- a/week3/index.html
+++ b/week3/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-        <h1> 
+        <h1>
             Reggie's Coffee Shop
         </h1>
     </header>
@@ -17,7 +17,9 @@
         <article>
             <h2>Our Story</h2>
             <p>
-            We are a <em>family owned business</em> , Reggie is the <abbr title="Chief Executive Officer">CEO</abbr> and the head barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their 10<sup>th</sup> anniversary together in December 2021.
+                We are a <em>family owned business</em> , Reggie is the <abbr title="Chief Executive Officer">CEO</abbr>
+                and the head barista of the shop. Maria is the pastry chef and is in-charge of the bake shop.
+                Celebrating their 10<sup>th</sup> anniversary together in December 2021.
             </p>
             <blockquote>
                 We love Coffee! <cite>- Reggie & Maria</cite>
@@ -38,44 +40,44 @@
                 <li>Hats</li>
                 <li>Hoodies</li>
             </ul>
-            </aside>
-            <!-- adding section for ordered list -->
-            <section>
-                <h3> Events</h3>
-                <ol>
-                    <li>June 23<sup>rd</sup> - Coffee for Hope Foundation</li>
-                    <li>July 17<sup>th</sup> - Live Music</li>
-                </ol>
-            </section>
-            <!-- adding section for the descritpion list  -->
-            <section>
-                <h3>Treat of the Week</h3>
-                <dl>
-                    <dt>Name</dt>
-                    <dd>Banana Bread</dd>
-                    <dt>Calories</dt>
-                    <dd>250</dd>
-                    <dt>Ingredients</dt>
-                    <dd>
-                        <ul>
-                            <li>all purpose flour</li>
-                            <li>baking Soda</li>
-                            <li>baking Powder</li>
-                            <li>salt</li>
-                            <li>sugar</li>
-                            <li>eggs</li>
-                            <li>lemon juice</li>
-                            <li>bananas</li>
-                        </ul>
-                    </dd>
-                </dl>
-            </section>
+        </aside>
+        <!-- adding section for ordered list -->
+        <section>
+            <h3> Events</h3>
+            <ol>
+                <li>June 23<sup>rd</sup> - Coffee for Hope Foundation</li>
+                <li>July 17<sup>th</sup> - Live Music</li>
+            </ol>
+        </section>
+        <!-- adding section for the descritpion list  -->
+        <section>
+            <h3>Treat of the Week</h3>
+            <dl>
+                <dt>Name</dt>
+                <dd>Banana Bread</dd>
+                <dt>Calories</dt>
+                <dd>250</dd>
+                <dt>Ingredients</dt>
+                <dd>
+                    <ul>
+                        <li>all purpose flour</li>
+                        <li>baking Soda</li>
+                        <li>baking Powder</li>
+                        <li>salt</li>
+                        <li>sugar</li>
+                        <li>eggs</li>
+                        <li>lemon juice</li>
+                        <li>bananas</li>
+                    </ul>
+                </dd>
+            </dl>
+        </section>
     </main>
     <!-- site footer -->
     <footer>
-    Copyright Reggie's Coffee Shop, 2021.
+        Copyright &copy; Reggie&apos;s Coffee Shop, 2021.
 
- </footer>
+    </footer>
 </body>
 
 </html>
