adds image and hobby list to index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,7 +11,16 @@
         <h1>
          Connor Farrell
         </h1>
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME</a> </li>
+                <li><a href="notes.html">NOTES</a></li>
+            </ul>
+        </nav>
+        <hr>
     </header>
+    <img src="images/ConnorFarrellAkasuki.PNG" alt="picture of connor">
     <main>
         <article>
         <h2>About Me</h2>
@@ -24,6 +33,12 @@
         <quote>
             <b>&#34;Creativity is intelligence having fun.&#34;</b> <cite> - Albert Einstein</cite> 
         </quote>
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Live Streaming Video Games</li>
+            <li>Skateboarding</li>
+            <li>Drawing</li> 
+        </ul>
         <hr>
         </article>
     </main>
