moved article tag on index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<html>
+<html lang="en"><html>
 <head>
     <meta charset="UFT-8">
     <title>Connor Farrell: Portfolio</title>
@@ -30,6 +29,7 @@
         <p>
             Since graduation, Connor has worked with local businesses like <b>Beefer&apos;s Skate Shop</b> to international companies such as <b>Black Cellar Wine</b> to create images for publication and social media purposes. Even though photography will always be Connor&apos;s passion, he has started branching out creating websites, graphics, and videos for businesses and companies. 
         </p>
+    </article>
         <quote>
             <b>&#34;Creativity is intelligence having fun.&#34;</b> <cite> - Albert Einstein</cite> 
         </quote>
@@ -40,7 +40,6 @@
             <li>Drawing</li> 
         </ul>
         <hr>
-        </article>
     </main>
     <footer>
         Copyright &copy; Connor Farrell&#58; Photographer
