moved body tag in index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><html>
+<html lang="en">
 <head>
     <meta charset="UFT-8">
     <title>Connor Farrell: Portfolio</title>
@@ -31,6 +31,7 @@
         </p>
     </article>
 </main>
+</body>
         <quote>
             <b>&#34;Creativity is intelligence having fun.&#34;</b> <cite> - Albert Einstein</cite> 
         </quote>
@@ -44,5 +45,4 @@
     <footer>
         Copyright &copy; Connor Farrell&#58; Photographer
     </footer>
-</body>
 </html>
