--- a/week5/index.html
+++ b/week5/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UFT-8">
     <title> Reggie's Coffee Shop - Home</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <!-- this is a HTML comment  -->
     <main>
         <!-- Adding on page link-->
-        <a href="#treatofweek">Treat of the Week</a>
+        <a href="#treatofweek" class="orange-link">Treat of the Week</a>
         <article>
             <h2>Our Story</h2>
             <!-- Adding image -->
@@ -30,7 +31,7 @@
                 and the head barista of the shop. Maria is the pastry chef and is in-charge of the bake shop.
                 Celebrating their 10<sup>th</sup> anniversary together in December 2021.
             </p>
-            <blockquote>
+            <blockquote class="large-text">
                 We love Coffee! <cite>- Reggie & Maria</cite>
             </blockquote>
             <hr>
@@ -81,12 +82,12 @@
                 </dd>
             </dl>
             <!-- Adding external link -->
-            <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the Recipe</a>
+            <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank" class="orange-link">Get the Recipe</a>
         </section>
         <!-- Adding section for menu-->
         <section>
             <h3>Menu Specials</h3>
-            <table border>
+            <table>
                 <thead>
                     <tr>
                         <th colspan="2">Items</th>
