adds CSS to index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UFT-8">
     <title>Connor Farrell: Portfolio</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <header>
+    <header class="title">
         <h1>
          Connor Farrell
         </h1>
-        <hr>
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a> </li>
-                <li><a href="notes.html">NOTES</a></li>
-            </ul>
-        </nav>
-        <hr>
     </header>
-    <img src="images/ConnorFarrellAkasuki.PNG" alt="picture of connor">
+    <nav>
+        <ul class="nav">
+            <li><a href="index.html" class="index-html">HOME</a> </li>
+            <li><a href="notes.html">NOTES</a></li>
+        </ul>
+    </nav>
+    <hr>
+    <img src="images/ConnorFarrellAkasuki.PNG" alt="picture of connor" id="my-image">
     <main>
         <article>
         <h2>About Me</h2>
@@ -35,7 +35,7 @@
     <b>&#34;Creativity is intelligence having fun.&#34;</b> <cite> - Albert Einstein</cite> 
 </quote>
 <h2>Hobbies</h2>
-<ul>
+<ul class="list">
     <li>Live Streaming Video Games</li>
     <li>Skateboarding</li>
     <li>Drawing</li> 
