adds underline css for heading tags, moved article

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -29,10 +29,11 @@
             Since graduation, Connor has worked with local businesses like <b>Beefer&apos;s Skate Shop</b> to international companies such as <b>Black Cellar Wine</b> to create images for publication and social media purposes. Even though photography will always be Connor&apos;s passion, he has started branching out creating websites, graphics, and videos for businesses and companies. 
         </p>
         <article>
+            <h3 class="quote"> Favorite quote</h3>
+        </article>
         <quote>
             <b>&#34;Creativity is intelligence having fun.&#34;</b> <cite> - Albert Einstein</cite> 
         </quote>
-    </article>
 </main>
 <h2>Hobbies</h2>
 <ul class="list">
