--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -3,7 +3,7 @@
     <html>
 
         <head>
-            <meta charset="UFT-8">
+            <meta charset="UTF-8">
             <title>HTML Notes</title>
         </head>
         
