--- a/week9/index.html
+++ b/week9/index.html
@@ -35,14 +35,14 @@
                 COVID-19 is a wake-up call from nature. Our lives depend on a healthy planet. Let’s seize the moment and change course – toward more sustainable lifestyles.
             </p>
         </section>
-        <section class="app">
+        <section class="app clearfix">
             <h2>Mobile App</h2>
             <img src="images/actnowapp.jpg" alt="Act Now App screenshot">
             <div class="app-content">
                 <p>
                     Make the shift to a more sustainable lifestyle. The mobile app by AWorld – because there is no planet B – allows you to choose and track a set of sustainable habits, and see the impact you are making in terms of CO2, water and electricity saved. You can also take educational journeys, engage in group challenges, get tips and take quizzes, all geared toward living more sustainably.
                 </p>
-                <a href="https://aworld.app.link/RuGYTvUs2Z" target="_blank" class="btn"></a>
+                <a href="https://aworld.app.link/RuGYTvUs2Z" target="_blank" class="btn"> Download from App Store</a>
             </div>
         </section>
     </main>
