--- a/week10/index.html
+++ b/week10/index.html
@@ -18,6 +18,14 @@
         <div class="banner">
             <h1>act now</h1>
         </div>
+        <nav class="main-nav">
+            <ul class="nav-list">
+                <li><a href="index.html" class="current">Home</a></li>
+                <li><a href="#">Climate</a></li>
+                <li><a href="#">For Kids</a></li>
+                <li><a href="#">Facts and Figures</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="content">
         <section class="intro">
@@ -44,6 +52,21 @@
                 </p>
                 <a href="https://aworld.app.link/RuGYTvUs2Z" target="_blank" class="btn"> Download from App Store</a>
             </div>
+        </section>
+        <section class="actions">
+            <h2>Start with 10 simple actions</h2>
+            <ul class="actions-list">
+                <li><img src="images/bring_bag.png" alt="bring own bag">Bring Own Bag</li>
+                <li><img src="images/drive_less.png" alt="drive less">Drive Less</li>
+                <li><img src="images/lights_off.png" alt="lights off">Lights Off</li>
+                <li><img src="images/local.png" alt="local produce">Local Produce</li>
+                <li><img src="images/plant-based.png" alt="Plant Based">Plant Based</li>
+                <li><img src="images/recycle.png" alt="recycle">Recycle</li>
+                <li><img src="images/reuse.png" alt="Reuse">Reuse</li>
+                <li><img src="images/shower.png" alt="5-minute showers">5-minute showers</li>
+                <li><img src="images/unplug.png" alt="Unplug">Unplug</li>
+                <li><img src="images/zero-waste_fashion.png" alt="Zero-waste Fashion">Zero-waste Fashion</li>
+            </ul>
         </section>
     </main>
     <footer class="site-footer">
