adds services and about css

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -29,7 +29,7 @@
                             <li><a href="#">Services</a></li>
                             <li><a href="#">Team</a></li>
                             <li><a href="#">Contact</a></li>
-                            <li>
+                            <li></li>
                                 <form class="search-bar" action="action_page.php">
                                     <input type="text" placeholder="Search.." name="search" id="search">
                                     <button type="submit"><i class="im im-magnifier"></i></button>
@@ -61,16 +61,19 @@
                     <h2> About Us</h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum dui diam, ut pulvinar
                         neque tempor porttitor. Praesent faucibus dolor vehicula turpis sollicitudin sollicitudin. Fusce
-                        vitae posuere tortor. Praesent suscipit nisl eu elementum scelerisque. Aenean blandit turpis
-                        mauris, eu aliquam ligula lacinia quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Vestibulum urna diam, maximus et massa elementum, rutrum pharetra magna.</p>
+                        vitae posuere tortor.
+                    </p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum dui diam, ut pulvinar
+                        neque tempor porttitor. Praesent faucibus dolor vehicula turpis sollicitudin sollicitudin. Fusce
+                        vitae posuere tortor.
+                    </p>
                 </div>
             </div>
         </section>
         <!-- Services Section  -->
         <section class="all-services">
-            <div class="our-serivices">
-                <h2>Our Services</h2>
+            <div class="our-services">
+                <h2 id="service">Our Services</h2>
                 <div class="digital">
                     <img src="images/digital.jpg" alt="our services">
                     <h3>Digital Transformation</h3>
